src/compiler/snapshots/isa__compiler__lexer__tests__string_errors.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"foo\"#).next()"
---
Some(
    Err(
        Spand {
            data: UnterminatedString,
            span: SpanData { file_id: 0, lo: 0, hi: 4 },
        },
    ),
)
