src/compiler/snapshots/isa__compiler__lexer__tests__strings-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"foo\\n\"\"#).next()"
---
Some(
    Ok(
        Spand {
            data: String(
                "foo\n",
            ),
            span: SpanData { file_id: 0, start: 0, end: 7 },
        },
    ),
)
