src/compiler/snapshots/isa__compiler__lexer__tests__strings-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"bar\\r\"\"#).next()"
---
Some(
    Ok(
        Spand {
            data: String(
                "bar\r",
            ),
            span: SpanData { file_id: 0, start: 0, end: 7 },
        },
    ),
)
