src/compiler/snapshots/isa__compiler__lexer__tests__strings-4.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"ba5\\t\"\"#).next()"
---
Some(
    Ok(
        Spand {
            data: String(
                "ba5\t",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 7 },
        },
    ),
)
