src/compiler/snapshots/isa__compiler__lexer__tests__strings-5.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"ba3\\\"\"\"#).next()"
---
Some(
    Ok(
        Spand {
            data: String(
                "ba3\"",
            ),
            span: SpanData { file_id: 0, start: 0, end: 7 },
        },
    ),
)
