src/compiler/snapshots/isa__compiler__lexer__tests__strings-6.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"ba2\\0a\"\"#).next()"
---
Some(
    Ok(
        Spand {
            data: String(
                "ba2\0a",
            ),
            span: SpanData { file_id: 0, start: 0, end: 8 },
        },
    ),
)
