src/compiler/snapshots/isa__compiler__lexer__tests__strings.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"foo\"\"#).next()"
---
Some(
    Ok(
        Spand {
            data: String(
                "foo",
            ),
            span: SpanData { file_id: 0, start: 0, end: 5 },
        },
    ),
)
