src/compiler/snapshots/isa__compiler__lexer__tests__tuples.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"()\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, start: 0, end: 1 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, start: 1, end: 2 },
        },
    ),
]
